messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-messaging-blue
  template:
    metadata:
      labels:
        app: django-messaging-blue
    spec:
      containers:
      - name: django-messaging-app
        image: your-dockerhub-username/django-messaging-app:1.0 # <-- Replace with your actual image
        ports:
        - containerPort: 8000
